<resources>
    <string name="app_name">Time Keeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calendar">To Do List</string>
    <string name="navigation_daily_activity">Daily Time Log</string>
    <string name="navigation_calendar">Calendar</string>
    <string name="edit_fab_text">Edit</string>
    <string name="display_item">Item</string>
    <string name="display_priority">Priority</string>
    <string name="display_end_date">End Date</string>
    <string name="display_details">Details</string>
    <string name="menu_edit">Edit</string>
    <string name="Menu_update">Update</string>
    <string name="priority_1">Priority 1</string>
    <string name="priority_2">Priority 2</string>
    <string name="priority_3">Priority 3</string>
    <string name="menu_cancel">Cancel</string>
    <string name="Details_Item_Activity">Item Details</string>
    <string name="Add_New_Item_Activity">Add New Item</string>
    <string name="Update_Item_Activity">Update Item</string>
    <string name="datepicker">datePicker</string>
    <string name="hint_word">Todo Task...</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string-array name="Q_metrics">
        <item>Q1 - Urgent And Important</item>
        <item>Q2 - Important But Not Urgent</item>
        <item>Q3 - Urgent But Not Important</item>
        <item>Q4 - Neither Urgent Nor Important</item>
    </string-array>
    <string-array name="hours">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="mins">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="am_pm">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="duration_group">
        <item>Group 0: Anytime</item>
        <item>Group 1: 8AM - 11AM</item>
        <item>Group 2: 11AM - 2PM</item>
        <item>Group 3: 2PM - 5PM</item>
        <item>Group 4: 5PM - 8PM</item>
    </string-array>
    <string name="add_more_details_optional">Add more details (Optional)</string>
    <string name="task_name">Task Name</string>
    <string name="metrics">Daily Metrics</string>
    <string name="bug_report">Bug Report</string>
    <string name="file_a_bug_report_to_us_via_email">File a bug report to us via email</string>
    <string name="logout">Logout</string>
    <string name="logout_from_app_as_the_current_user">Logout from app as the current user</string>
    <string name="how_to_guide_subtitle">How to use the App and App Terminologies</string>
    <string name="how_to_guide_title">User Guide</string>
    <string name="backup_title">Backup</string>
    <string name="backup_subtitle">Backup to the remote server</string>
    <string name="about_us_title">About Us</string>
    <string name="how_to_guide_things_to_know">Things to know</string>
    <string name="how_to_guide_priority_values">
        \t\tPriority 1: Must Do \n\t\tPriority 2: Should Do \n\t\tPriority 3: Could Do, May Do, Nice to Do
    </string>
    <string name="how_to_guide_terminology">Terminology</string>
    <string name="how_to_guide_categories_of_time_management_matrix">Categories of Time Management Matrix:</string>
    <string name="how_to_guide_matrix_values">
\t\tQ1: Important and Urgent \n\t\tQ2: Important, not Urgent \n\t\tQ3: Urgent, not Important \n\t\tQ4: Not Urgent, Not Important but Busy Work
\n\n\t\tImportant Tasks: doing which moves you towards your goal
\n\t\tUrgent Tasks: ones which requires immediate action
    </string>
    <string name="how_to_guide_time_management_matrix">Time Management Matrix</string>
    <string name="weekly_metric">Weekly Metric</string>
    <string name="share_app_title">Share App</string>
    <string name="share_app_subtitle">Share the app and help others improve themselves</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="user_guide_title">User Guide to Time Keeper App</string>
    <string name="user_guide_imp_steps">
        \n1. Install the app from Google Play Store.
        \n\n2. Register yourself. DOB is asked for in case you forget your password at some stage.
        \n\n3. Log in with your user id and password.
        \n\n4. Main screen will open
        \n\n5. Four options are available on Main screen
            \n\n\ta. What are my To Do tasks
            \n\n\tb. Time Log
            \n\n\tc. Daily metrics
            \n\n\td. Weekly metrics
        \n\n6. To do Tasks
            \n\n\ta. Click on To do. It will open the calendar and Add+ icon.
            \n\n\tb. Tap on &#63; at right hand corner will open a narration on To Do.
            \n\n\tc. Tap on three vertical dots at right hand corner will open Settings. Press &#x2714;at left hand corner to exit the narration and come back to To Do.
            \n\n\td. Enter the To Do tasks you need to do today or at a later date (use calendar).
            \n\n\te. The task name and priority to be entered. Priority 1 is Must Do task, Priority 2 is Should Do task and Priority 3 is Could Do, May Do, Nice to Do task.
            \n\n\tf. Additional details of task can be inserted on Add more details.
            \n\n\tg. When adding To Do task, it will ask for grouping. Group 0 means task can be done anytime time during the day. Group 1 is 8 to 11am, Group 2 11am to 2 pm, Group 3 is 2 to 5 pm, and Group 4 is 5 to 8pm.
            \n\n\th. After adding the task details, press the icon on the top right corner.
            \n\n\ti. Long press or use menu (three vertical dots on the right). This will open the Add Daily task screen.
            \n\n\tj. Enter the start time including AM/PM
            \n\n\tk. Enter the end time including AM/PM
            \n\n\tl. Duration of task will be auto computed
            \n\n\tm. Value of task: click and drop down will appear : Q1-Urgent and Important,Q2-Important but not Urgent,Q3-Urgent but not Important and Q4-Neither Urgent nor Important. Select the appropriate one.
            \n\n\tn. Then click the icon on top right corner to complete the task.
            \n\n\to. To update and edit task, short press the task. Update screen will open. Do the updating or editing and press the icon at top right corner.
            \n\n\tp. The three vertical dots appearing after each task represent the following:
            \n\n\tq. Delete-pressing this will delete the task
            \n\n\tr. Copy to other date-the task can be copied to next date or any other date. You do not have to retype the task. Useful for repetitive tasks like Exercise, Morning Meeting, Plant round.
            \n\n\ts. Complete task-this will open the Add Daily task screen as described in 6i,j,k,l,m,n.
        \n\n7. Time Log
            \n\n\ta. Click on Time log. Daily Time Log screen will open.
            \n\n\tb. &#63; and three dots on right hand corner have to be used as described above.
            \n\n\tc. Add the tasks completed by you. Enter the start time, end time and value of task similar to the To Do task directions as above.
            \n\n\td. Then click the icon on top right corner.
            \n\n\te. Get a timeline of how the day was spent and how your time was consumed.
        \n\n8. Daily Metrics
            \n\n\ta. Metrics are prepared based on the daily time log inputs and completion of To Do tasks.
            \n\n\tb. The daily metrics evaluates the effectiveness of your time management using the Time Management matrix and the proportion of time spent on Q1-Urgent and Important,Q2-Important but not Urgent,Q3-Urgent but not Important and Q4-Neither Urgent nor Important.
            \n\n\tc. The comments are displayed according to the performance.
            \n\n\td. The percentage completion of To Do tasks is computed.
            \n\n\te. Comments given based on completion of To Do.
        \n\n9. Weekly Metrics
            \n\n\ta. Get metrics for the last 7 days based on hours entered in the Time Log. All other aspects same as daily metrics.
        \n\n10. Settings
            \n\n\ta. Three dots on right hand corner is the Settings button. Tap it and the screen which opens will have the following content.
            \n\n\tb. Bug report
                \n\t\ti) Tap this and the email template will open, and you can report the bug to us.
            \n\n\tc. Backup
                \n\t\ti) The data will be archived in the remote server.
            \n\n\td. Logout
                \n\t\ti) Logout from app as the current user
            \n\n\te. App terminology
                \n\t\ti) Explanation of Priorities and Time Management Matrix
            \n\n\tf. About Us
                \n\t\ti) This opens up the web site www.betterthanbeforesolution.com and provides details of the services rendered.
            \n\n\tg. Share App
                \n\t\ti) Tap on this and you can share the app with others through mail, WhatsApp, Facebook etc and help others improve their personal productivity.
            \n\n\th. Privacy Policy
            \n\n\ti. Version no
            \n\n\tj. Version release
        \n\n11. Daily tips
            \n\n\ta. Tips on how to manage your time and reduce or eliminate time wasters are shared each day.
        \n\n12. Summarising Steps for optimum usage of app:
            \n\n\ta. Enter To Do tasks for current or any future date.
            \n\n\tb. When a tsk is completed enter it in the time log
            \n\n\tc. Maintain the time log to see how your time is spent, and the activities here maybe in addition to your To Do list. Use the \'+\' button in the Daily Time Log Page and fill details. The Time Log will help you in identifying time wasters.
            \n\n\td. Use metrics and analysis of your time log to identify improvement opportunities in effective use of your time.
            \n\n\te. Apply time management tips to improve your time management.
    </string>
</resources>