<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/title_activity_calendar" />
        <item
            android:id="@+id/nav_daily_activity"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/navigation_daily_activity" />
        <item
            android:id="@+id/nav_metric_activity"
            android:icon="@drawable/ic_done_all_black_24dp"
            android:title="@string/metrics" />
        <item
            android:id="@+id/nav_weekly_metric_activity"
            android:icon="@drawable/ic_view_week_black_24dp"
            android:title="@string/weekly_metric" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
